--- a/css/style.css
+++ b/css/style.css
@@ -7990,3 +7990,274 @@ tr{
   min-height: 300px;
   width: 100vw;
 }
+
+body{
+  background-color: white;
+  overflow-x: hidden;
+}
+
+.wrapping{
+  /* width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  /* height: 400px; */
+  background-color: white;
+}
+
+.wrapping .page-content{
+  width: 88.5%;
+  height: fit-content;
+  /* min-height: 30px; */
+}
+
+.wrapping .page-content .departments-menu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapping .page-content .departments-menu .flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 50px;
+  width: 89%;
+  flex-wrap: wrap;
+}
+
+.wrapping .page-content .departments-menu .square{
+  background-color: #0055A5;
+  width: 95px;
+  height: 95px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.wrapping .page-content .departments-menu .square:hover{
+  background-color: #17446f;
+}
+
+.wrapping .page-content .departments-menu .square img{
+  width: auto;
+  height: 21px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.wrapping .page-content .departments-menu .square h4{
+  font-size: 1.35rem;
+  width: 60%;
+  text-align: center; 
+}
+
+.wrapping .navbar{
+  background-color: #004E8C;
+  width: 100vw;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 20px;
+  box-sizing: border-box;
+}
+
+.wrapping .navbar .left{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.wrapping .navbar .right{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.wrapping .navbar .left img{
+      width: 135px;
+}
+
+.wrapping .navbar .left h1{
+  color: white;
+  font-size: 2.5rem;
+  margin-left: 10px;
+}
+
+.wrapping .navbar .right{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.wrapping .navbar .right button{
+      background: transparent;
+    color: white;
+    border: none;
+    font-size: 1.4rem;
+}
+
+.wrapping .navbar .right .profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapping .navbar .right .profile img{
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
+}
+
+.wrapping .navbar .right .profile a{
+  text-decoration: none;
+    color: white;
+}
+
+.second-row .flex{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+
+.second-row .flex .grid-4{
+    width: 62%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 50px;
+}
+
+.second-row .flex .side-menu{
+  width: 30%;
+  height: fit-content;
+  background-color: #0056A8;
+  border-radius: 10px;
+  color: white;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.second-row .flex .side-menu .buttons-flex{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.second-row .flex .side-menu .buttons-flex .employee-sceheme{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons-flex .employee-sceheme button{
+    border: none;
+    outline: none;
+    background-color: #FFFFFF;
+    border-radius: 7px;
+    height: 40px;
+    padding: 0px 10px;
+    width: 95%;
+    transition: all 0.4s ease;
+}
+
+.buttons-flex .employee-sceheme button:hover{
+  background-color: #c8c8c8;
+}
+
+.second-row .flex .side-menu .buttons-flex .time-in{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.second-row .flex .side-menu .buttons-flex .time-in button{
+    border: none;
+    outline: none;
+    background-color: #FFFFFF;
+    border-radius: 7px;
+    height: 40px;
+    padding: 0px 10px;
+    width: 95%;
+    transition: all 0.4s ease;
+}
+
+.buttons-flex . button:hover{
+  background-color: #c8c8c8;
+}
+
+.second-row .flex .grid-4 .grid-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.second-row .flex .grid-4 .grid-box h2{
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.second-row .flex .grid-4 .grid-box img{
+  width: 400px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.second-row .flex .grid-4 .grid-box p{
+  font-size: 1.4rem;
+}
+
+.second-row .flex .grid-4 .grid-box .message-1{
+  width: 400px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+  object-position: center;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), url('../images/history-image.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.second-row .flex .grid-4 .grid-box .message-2{
+  width: 400px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+  object-position: center;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), url('../images/header-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 20px;
+  box-sizing: border-box;
+}
