--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ svg:not(:root) { overflow: hidden; }
 }
 
 .Announcement img{
-  border-radius: 13px;
+  border-radius: 10px;
   height: 405px;
   width: 100%;
   object-fit: cover;
@@ -190,7 +190,7 @@ svg:not(:root) { overflow: hidden; }
 
 .flexxed .request-table{
   height: 405px;
-  border-radius: 13px;
+  border-radius: 10px;
 }
 
 thead{
@@ -201,7 +201,7 @@ thead{
   background-color: #0056A3;
   color: #E0E0E0;
   text-transform: uppercase;
-  border-radius: 19px 19px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   display: flex;
   align-items: center;
   padding-top: 10px;
@@ -212,7 +212,7 @@ thead{
   /* background-color: #0056A3; */
   /* color: #E0E0E0; */
   text-transform: uppercase;
-  border-radius: 19px 19px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   display: flex;
   align-items: center;
   padding-top: 10px;
@@ -402,7 +402,7 @@ thead{
 table {
     width: 100%;
     border-collapse: collapse;
-    border-radius: 19px; /* Add border radius */
+    border-radius: 10px; /* Add border radius */
     overflow: hidden; /* Ensures the corners are rounded */
     border: none;
 }
@@ -522,7 +522,7 @@ tr{
     width: 72%;
     background-color: white;
     min-height: 420px;
-    border-radius: 19px;
+    border-radius: 10px;
     padding: 25px 45px;
     box-sizing: border-box;
 }
@@ -611,7 +611,7 @@ tr{
 .documents-box{
   background-color: white;
   min-height: 420px;
-  border-radius: 19px;
+  border-radius: 10px;
   box-sizing: border-box;
   padding: 30px;
 }
@@ -759,97 +759,6 @@ tr{
 
 }
 
-@media screen and (max-width: 867px){
-  .info .flexxed{
-    align-items: flex-start !important;
-  }
-  .flexxed {
-    flex-direction: column;
-    gap: 10px;
-    align-items: center !important;
-  }
-  .mid-row {
-    width: 100vw !important;
-    margin-top: 40px;
-  }
-  .square-box {
-    width: 95% !important;
-    height: fit-content !important;
-    background-color: white !important;
-    border-radius: 19px !important;
-    box-sizing: border-box !important;
-    padding: 25px 10vw !important;
-  }
-  .Announcement{
-    width: 95%;
-  }
-  .request-table {
-    width: 95% !important;
-    background-color: white !important;
-    height: 380px !important;
-    border-radius: 19px !important;
-    height: fit-content !important;
-  }
-  .request-table Table{
-      height: fit-content;
-  }
-  .last-row {
-    width: 100vw !important;
-    margin-top: 10px !important;
-  }
-  .frequently-accessed {
-    width: 95% !important;
-    background-color: white !important;
-    min-height: 420px !important;
-    border-radius: 19px !important;
-    padding: 25px 45px!important;
-    box-sizing: border-box !important;
-  }
-  .documents-box h2 {
-    color: #5F5F5F;
-    font-size: 1.6rem !important;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    letter-spacing: -0.4px;
-  }
-  .frequently-accessed h2 {
-    color: #0056A3;
-    font-size: 1.7rem !important;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    letter-spacing: -0.4px;
-  }
-  .first-column .merged-row h5 {
-    font-size: 1.1rem;
-    margin-bottom: 0px;
-    line-height: 1.1rem;
-    width: 100%;
-    height: 60px;
-    overflow-y: visible;
-    word-break: break-word;
-    font-size: 0.9rem;
-  }
-  .search-box{
-    min-width: 150px;
-  }
-  .quick-links h2{
-    font-size: 1.7rem !important;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    letter-spacing: -0.4px;
-  }
-  .first-column{
-    height: 100px;
-  }
-  .third-column {
-    text-align: right;
-    text-align: right;
-    width: 70px;
-    padding-right: 10px;
-  }
-
-}
-
 .hero-area a{
   margin: 0px;
   padding: 0px;
@@ -900,7 +809,7 @@ tr{
   width: 73%;
   background-color: #0056A3;
   color: white;
-  border-radius: 13px;
+  border-radius: 10px;
   min-height: 233px;
   padding: 30px;
   box-sizing: border-box;
@@ -1609,7 +1518,7 @@ body{
 .box {
   /* flex: 1; */
   /* min-width: 300px; */
-  width: 30%;
+  width: 35%;
   background: white;
   padding: 1.5rem;
   border-radius: 12px;
@@ -1718,9 +1627,9 @@ body{
 
 .document-card .doc-info .doc-title{
     margin: 0.2rem 0;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 600;
-    line-height: 150%;
+    line-height: 100%;
     width: 95%;
     box-sizing: border-box;
 }
@@ -1996,10 +1905,6 @@ body{
 .person .info{
       margin-left: 10px;
 }
-.person .info h2{
-    margin-top: -10px;
-}
-
 @media screen and (max-width: 1511px){
   .second-row .flex .grid-4{
     margin-left: 20px !important;
@@ -2020,6 +1925,94 @@ body{
     width: 49%;
     min-width: 200px;
   }
+}
+
+@media screen and (max-width: 1180px){
+  .flexxed{
+    flex-direction: column;
+  }
+  .calendar-events-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0rem;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    width: 98%;
+  }
+  .event-div {
+    width: 68%;
+  }
+  .events-header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .events-section {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    /* min-width: 50px; */
+    width: 100%;
+    margin-top: 2rem;
+  }
+  .event-card {
+    background: white;
+    min-width: 100px;
+    width: 100%;
+    height: 98%;
+    border-radius: 5px;
+    overflow: hidden;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.08); */
+    border: 1px solid #BEBDC0;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+  /* .event-card-container{
+    width: 25%;
+  } */
+  .Announcement {
+    width: 98%;
+    position: relative;
+    height: 250px;
+  }
+  .Announcement img {
+    height: 250px;
+  }
+  .flexxed-2{
+    width: 94%;
+    display: flex;
+    align-items: flex-start;
+    margin-top: 10px;
+  }
+  .middle-row {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+  .last-row {
+    width: 88.5vw;
+    margin-top: 20px;
+    margin-bottom: 0px;
+  }
+  .announcement-sec {
+    width: 73%;
+    min-height: 270px;
+  }
+  .last-row .flexxed{
+    flex-direction: row;
+    margin-bottom: 40px;
+  }
+  .mid-row{
+    margin-top: 0px;
+  }
+
+
 }
 
 @media screen and (max-width: 1030px){
@@ -2144,6 +2137,195 @@ body{
   }
 }
 
+@media screen and (max-width: 900px){
+    /* .events-section {
+      display: flex;
+      flex: 1;
+      justify-content: space-around;
+      width: 100%;
+      margin-top: 2rem;
+      gap: 0px !important;
+    }
+    .event-card-container {
+      width: 30%;
+    } */
+  .event-card-container {
+    width: 30%;
+  }
+  .event-div {
+    width: 63%;
+  }
+  .events-section {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 2rem;
+    gap: 0px !important;
+    min-width: 300px;
+  }
+  .calendar-events-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 0rem;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    width: 100%;
+  }
+  .event-card {
+    background: white;
+    min-width: 100px;
+    width: 100%;
+    height: 98%;
+    border-radius: 5px;
+    overflow: hidden;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.08); */
+    border: 1px solid #BEBDC0;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+}
+
+@media screen and (max-width: 867px){
+  .info .flexxed{
+    align-items: flex-start !important;
+  }
+  .flexxed {
+    flex-direction: column;
+    gap: 10px;
+    align-items: center !important;
+  }
+  .mid-row {
+    width: 100vw !important;
+    margin-top: 40px;
+  }
+  .square-box {
+    width: 89% !important;
+    height: fit-content !important;
+    background-color: white !important;
+    border-radius: 10px !important;
+    box-sizing: border-box !important;
+    padding: 25px !important;
+    min-height: 170px !important;
+  }
+  .Announcement{
+    width: 95%;
+  }
+  .request-table {
+    /* width: 95% !important; */
+    background-color: white !important;
+    height: 380px !important;
+    height: fit-content !important;
+  }
+  .request-table Table{
+      height: fit-content;
+  }
+  .last-row {
+    width: 100vw !important;
+    margin-top: 10px !important;
+  }
+  .frequently-accessed {
+    width: 95% !important;
+    background-color: white !important;
+    min-height: 420px !important;
+    border-radius: 10px !important;
+    padding: 25px 45px!important;
+    box-sizing: border-box !important;
+  }
+  .documents-box h2 {
+    color: #5F5F5F;
+    font-size: 1.6rem !important;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    letter-spacing: -0.4px;
+  }
+  .frequently-accessed h2 {
+    color: #0056A3;
+    font-size: 1.7rem !important;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    letter-spacing: -0.4px;
+  }
+  .first-column .merged-row h5 {
+    font-size: 1.1rem;
+    margin-bottom: 0px;
+    line-height: 1.1rem;
+    width: 100%;
+    height: 60px;
+    overflow-y: visible;
+    word-break: break-word;
+    font-size: 0.9rem;
+  }
+  .search-box{
+    min-width: 150px;
+  }
+  .quick-links h2{
+    font-size: 1.7rem !important;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    letter-spacing: -0.4px;
+  }
+  .first-column{
+    height: 100px;
+  }
+  .third-column {
+    text-align: right;
+    text-align: right;
+    width: 70px;
+    padding-right: 10px;
+  }
+  .last-row .flexxed {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+  .announcement-sec{
+    width: 89.3%;
+    min-height: 170px;
+  }
+
+}
+
+@media screen and (max-width: 900px){
+  .calendar-events-wrapper{
+    flex-direction: column;
+  }
+  .calendar-box {
+    width: 50%;
+    height: 314px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .event-div {
+    width: 90%;
+  }
+  .event-card-container {
+    width: 32%;
+  }
+  .three-column-wrapper{
+    flex-direction: column;
+  }
+  .three-column-wrapper .poll {
+    width: 100%;
+  }
+  .box {
+    width: 100%;
+  }
+  .people-dir {
+    width: 100%;
+  }
+  .people-box {
+    height: fit-content;
+  }
+  .person .info h2 {
+    margin-top: 0px;
+  }
+}
+
 @media screen and (max-width: 638px) {
     .request-table {
         overflow-x: auto;
@@ -2241,144 +2423,16 @@ body{
     }
 }
 
-@media screen and (max-width: 1180px){
-  .flexxed{
+@media screen and (max-width: 630px){
+  .flexxed-2{
     flex-direction: column;
   }
-  .calendar-events-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0rem;
-    flex-wrap: wrap;
-    margin-top: 2rem;
-    width: 98%;
-  }
-  .event-div {
-    width: 68%;
-  }
-  .events-header {
-    display: flex;
+  .flexxed .request-table {
     width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 20px;
   }
-  .events-section {
-    display: flex;
-    flex: 1;
-    justify-content: space-between;
-    /* min-width: 50px; */
-    width: 100%;
-    margin-top: 2rem;
-  }
-  .event-card {
-    background: white;
-    min-width: 100px;
-    width: 100%;
-    height: 98%;
-    border-radius: 5px;
-    overflow: hidden;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.08); */
-    border: 1px solid #BEBDC0;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  }
-  /* .event-card-container{
-    width: 25%;
-  } */
-}
-
-@media screen and (max-width: 900px){
-    /* .events-section {
-      display: flex;
-      flex: 1;
-      justify-content: space-around;
-      width: 100%;
-      margin-top: 2rem;
-      gap: 0px !important;
-    }
-    .event-card-container {
-      width: 30%;
-    } */
-  .event-card-container {
-    width: 30%;
-  }
-  .event-div {
-    width: 63%;
-  }
-  .events-section {
-    display: flex;
-    flex: 1;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 2rem;
-    gap: 0px !important;
-    min-width: 300px;
-  }
-  .calendar-events-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 0rem;
-    flex-wrap: wrap;
-    margin-top: 2rem;
-    width: 100%;
-  }
-  .event-card {
-    background: white;
-    min-width: 100px;
-    width: 100%;
-    height: 98%;
-    border-radius: 5px;
-    overflow: hidden;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.08); */
-    border: 1px solid #BEBDC0;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  }
-  
-    
-}
-
-@media screen and (max-width: 700px){
-  .calendar-events-wrapper{
-    flex-direction: column;
-  }
-  .calendar-box {
-    width: 50%;
-    height: 314px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-  }
-  .event-div {
-    width: 90%;
-  }
-  .event-card-container {
-    width: 32%;
-  }
-  .three-column-wrapper{
-    flex-direction: column;
-  }
-  .three-column-wrapper .poll {
-    width: 100%;
-  }
-  .box {
-    width: 100%;
-  }
-  .people-dir {
-    width: 100%;
-  }
-  .people-box {
-    height: fit-content;
-  }
-  .person .info h2 {
-    margin-top: 0px;
+  .column .approver-column .date {
+    margin-top: 10px;
   }
 }
 
@@ -2449,5 +2503,7 @@ body{
     width: 90%;
     margin-bottom: 10px;
   }
-
+  .mid-row{
+    margin-top: 0px;
+  }
 }
