--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,19 @@
 /* Navbar */
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  line-height: 150%;
+  font-family: 'Avenir', sans-serif !important;
+}
+
+@font-face {
+    font-family: 'Avenir';
+    src: 
+         url('fonts/Avenir.woff') format('woff'); /* Optional */
+    font-weight: normal; /* Adjust as needed */
+    font-style: normal; /* Adjust as needed */
+}
 
 @media screen and (max-width: 500px) {
 	.menu_user_area .flex{
@@ -9,7 +24,7 @@
 	}
 	.quick-links .links a {
 		color: #5F5F5F !important;
-		font-family: 'Inter';
+		/* font-family: 'Inter'; */
 		text-decoration: none;
 		font-size: 1.1rem;
 		width: 170px;
@@ -312,68 +327,6 @@
 	margin-top: -10px;
 }
 
-
-.single-post .social_twitter,
-.single-event .social_twitter,
-.infopg .social_twitter,
-.faqpg .social_twitter,
-.typg .social_twitter,
-.scpg .social_twitter,
-.resumespg .social_twitter,
-.formatspg .social_twitter,
-.single-courses .social_twitter,
-.single-team .social_twitter,
-.leaderspg .social_twitter {
-	background-image: url(../images/twitter.png);
-}
-.single-post .social_pinterest,
-.single-event .social_pinterest,
-.infopg .social_pinterest,
-.faqpg .social_pinterest,
-.typg .social_pinterest,
-.scpg .social_pinterest,
-.resumespg .social_pinterest,
-.formatspg .social_pinterest,
-.single-courses .social_pinterest,
-.single-team .social_pinterest,
-.leaderspg .social_pinterest {
-	background-image: url(../images/pinterest.png);
-}
-.single-post .social_gplus,
-.single-event .social_gplus,
-.infopg .social_gplus,
-.faqpg .social_gplus,
-.typg .social_gplus,
-.scpg .social_gplus,
-.resumespg .social_gplus,
-.formatspg .social_gplus,
-.single-courses .social_gplus,
-.single-team .social_gplus,
-.leaderspg .social_gplus {
-	background-image: url(../images/gplus.png);
-}
-.single-post .social_facebook,
-.single-event .social_facebook,
-.infopg .social_facebook,
-.faqpg .social_facebook,
-.typg .social_facebook,
-.scpg .social_facebook,
-.resumespg .social_facebook,
-.formatspg .social_facebook,
-.single-courses .social_facebook,
-.single-team .social_facebook,
-.leaderspg .social_facebook {
-	background-image: url(../images/facebook2.png);
-}
-
-body,
-button,
-input,
-select,
-textarea {
-	font-family: 'Inter', sans-serif
-}
-
 body {
 	font-size: 14px;
 	font-weight: 400;
@@ -384,7 +337,6 @@ body {
 
 h1,
 .h1 {
-	font-family: 'Inter', sans-serif;
 	font-size: 45px;
 	font-weight: 600;
 	line-height: 54px;
@@ -406,7 +358,6 @@ h1 a,
 
 h2,
 .h2 {
-	font-family: 'Inter';
 	font-size: 36px;
 	font-weight: 600;
 	line-height: 43px;
@@ -421,7 +372,6 @@ h2 a,
 
 h3,
 .h3 {
-	font-family: 'Inter', sans-serif;
 	font-size: 24px;
 	font-weight: 600;
 	line-height: 28px;
@@ -435,7 +385,6 @@ h3 a,
 
 h4,
 .h4 {
-	font-family: 'Inter', sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	line-height: 26px;
@@ -449,7 +398,6 @@ h4 a,
 
 h5,
 .h5 {
-	font-family: 'Inter', sans-serif;
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 24px;
@@ -463,7 +411,6 @@ h5 a,
 
 h6,
 .h6 {
-	font-family: 'Inter', sans-serif;
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 20px;
@@ -560,15 +507,6 @@ span.fc-button.fc-button-next.ui-state-default.ui-corner-left.ui-corner-right:ho
 
 .top_panel_over .top_panel_wrap{
 	height: 70px;
-}
-
-.top_panel_over .top_panel_wrap,
-.menu_main_wrap,
-.current_day {
-	/* background-color: white; */
-	background-color: #0056A3;
-    color: white;
-	/* height: 70px; */
 }
 
 @-moz-document url-prefix() {
@@ -740,7 +678,7 @@ span.fc-button.fc-button-next.ui-state-default.ui-corner-left.ui-corner-right:ho
 }
 
 body{
-	font-family: 'inter' !important;
+
 }
 
 /* .quick-links{
@@ -758,9 +696,8 @@ body{
 }
 
 .quick-links h2{
-	color: #898B91;
+	/* color: #898B91; */
     text-transform: uppercase;
-    font-family: 'Inter';
     font-size: 1.6rem;
 	margin-left: 2vw;
 }
@@ -787,13 +724,12 @@ body{
 
 .quick-links .links a{
 	color: #5F5F5F !important;
-	font-family: 'Inter';
 	text-decoration: none;
 	font-size: 1.1rem;
 }
 
 .blue-box{
-	background-color: #0056A3;
+	/* background-color: #0056A3; */
     padding: 0.5rem;
     border-radius: 5px;
     width: 20px;
@@ -1102,7 +1038,6 @@ body{
     }
 	.quick-links .links a {
 		color: #5F5F5F !important;
-		font-family: 'Inter';
 		text-decoration: none;
 		font-size: 1.1rem;
 		width: 170px;
@@ -1139,7 +1074,6 @@ body{
 	}
 	.quick-links .links a {
 		color: #5F5F5F !important;
-		font-family: 'Inter';
 		text-decoration: none;
 		font-size: 1.1rem;
 		width: 170px !important;
