--- a/css/style.css
+++ b/css/style.css
@@ -2528,3 +2528,11 @@ body{
 .task-card-link-grey:hover .request-table{
   box-shadow: rgba(138, 138, 138, 0.578) 0px 7px 29px 0px;
 }
+
+.expiry-date .line{
+    background-color: white;
+    width: 100%;
+    height: 1px;
+    opacity: 0.3;
+    margin: 30px 0 10px 0;
+}
