--- a/css/style.css
+++ b/css/style.css
@@ -1285,6 +1285,12 @@ body{
   width: 100%;
 }
 
+@media screen and (min-width: 1450px) {
+  .announcements-wrapper {
+    width: 97%;
+  }
+}
+
 .announcements-wrapper {
   border: 2px solid #BEBDC0;
   border-radius: 10px;
@@ -1372,7 +1378,8 @@ body{
   gap: 2rem;
   flex-wrap: wrap;
   margin-top: 2rem;
-  width: 90%;
+  /* width: 90%; */
+  width: 100%;
 }
 
 .event-div {
@@ -1507,7 +1514,7 @@ body{
   flex-wrap: wrap;
   gap: 2rem;
   margin-top: 2rem;
-  width: 90%;
+  width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -2124,13 +2131,19 @@ body{
     align-items: center;
     justify-content: space-evenly;
   }
+  .task-card-link-grey{
+    width: 44%;
+  }
+  .task-card-link-white{
+    width: 44%;
+  }
   .task-card {
     background: white;
     border-radius: 12px;
     padding: 1rem;
     margin-top: 1rem;
     color: black;
-    width: 44%;
+    width: 100%;
   }
 }
 
@@ -2448,13 +2461,27 @@ body{
     justify-content: space-evenly;
     flex-direction: column;
   }
+  .task-card-link-grey{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .task-card-link-white{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   .task-card {
     background: white;
     border-radius: 12px;
     padding: 1rem;
     margin-top: 1rem;
     color: black;
-    width: 85%;
+    width: 100%;
   }
   .calendar-box {
     width: 80%;
@@ -2535,4 +2562,14 @@ body{
     height: 1px;
     opacity: 0.3;
     margin: 30px 0 10px 0;
+}
+
+@media screen and (max-width: 1260px){
+  .last-rows {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95% !important;
+  }
 }
