--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,7 @@ thead{
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
+  width: 100%;
 }
 
 .pending-head{
@@ -2462,7 +2463,7 @@ body{
     flex-direction: column;
   }
   .task-card-link-grey{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2572,4 +2573,47 @@ body{
     justify-content: center;
     width: 95% !important;
   }
+}
+
+/* remove sections from mobile */
+@media screen and (max-width: 450px) {
+  .no-mobile-display{
+    display: none;
+  }
+}
+
+@media (max-width: 460px) {
+    .no-mobile-display {
+        display: none !important;
+    }
+    .second-row .flex{
+      width: 90% !important;
+      margin-top: 40px; 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .second-row .flex .grid-4 {
+        width: 95%;
+        margin-left: 0px !important;
+    }
+    .second-row .flex .grid-4 .grid-box {
+      width: 100% !important;
+      margin-left: 0px !important;
+    }
+    .tasks-section {
+        width: 100%;
+        margin-left: 0px;
+    }
+    .three-column-wrapper {
+      /* flex-direction: column; */
+      display: none;
+    }
+    .calendar-events-wrapper{
+      display: none;
+    }
+    .last-row{
+      display: none;
+    }
 }
